--- a/.github/workflows/cabal.project.yaml
+++ b/.github/workflows/cabal.project.yaml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macOS-latest, macOS-11, windows-latest, ubuntu-latest]
-        ghc: ["8.10.7", "9.0.2", "9.2.8", "9.4.8"]
+        ghc: ["8.10.7", "9.0.2", "9.2.8", "9.4.8", "9.6.4"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
