--- a/cabal.ghc948.Win32.project
+++ b/cabal.ghc948.Win32.project
@@ -11,12 +11,13 @@ else
 
 constraints: http-io-streams -brotli,
              any.aeson >= 2.0.1.0,
-             any.hsc2hs ==0.68.8,
+             any.hsc2hs >=0.68.10,
              bzlib-conduit >= 0.3.0.3,
              bz2 >= 1.0.1.1,
              bzlib >= 0.5.2.0,
              directory >= 1.3.8.3,
-             filepath == 1.4.101.0 || == 1.4.300.1 || >= 1.5.2.0
+             filepath == 1.4.101.0 || == 1.4.300.1 || >= 1.5.2.0,
+             tar >= 0.6.2.0
 
 if os(mingw32)
   constraints: zlib +bundled-c-zlib,
@@ -27,11 +28,6 @@ if os(mingw32)
   if impl(ghc >= 9.4)
     constraints: language-c >= 0.9.3
 
-
-source-repository-package
-  type: git
-  location: https://github.com/haskell/tar.git
-  tag: d94a988be4311b830149a9f8fc16739927e5fc1c
 
 source-repository-package
   type: git
@@ -51,11 +47,13 @@ package aeson
   flags: +ordered-keymap
 
 package streamly
-  flags: +use-unliftio
+  flags: +use-unliftio -streamly-core
 
 package *
   test-show-details: direct
 
-allow-newer: cabal-install-parsers:tar, streamly:Win32
-
+if impl(ghc >= 9.6)
+  allow-newer: streamly:Win32, streamly:ghc-prim, streamly:unicode-data, streamly:base, semigroupoids:base
+else
+  allow-newer: streamly:Win32
 
