--- a/ghcup.cabal
+++ b/ghcup.cabal
@@ -30,7 +30,8 @@ extra-source-files:
   test/ghcup-test/golden/unix/GHCupInfo.json
   test/ghcup-test/golden/windows/GHCupInfo.json
 
-tested-with: GHC==9.4.8
+tested-with: GHC==9.6.4
+           , GHC==9.4.8
            , GHC==9.2.8
            , GHC==9.0.2
            , GHC==8.10.7
@@ -77,7 +78,7 @@ common app-common-depends
     , directory              ^>=1.3.6.0
     , filepath               >=1.4.101.0
     , haskus-utils-types     ^>=1.5
-    , haskus-utils-variant   ^>=3.3
+    , haskus-utils-variant   ^>=3.3 || ^>=3.4
     , megaparsec             >=8.0.0    && <9.3
     , mtl                    ^>=2.2
     , optparse-applicative   >=0.15.1.0 && <0.18
@@ -188,7 +189,7 @@ library
     , filepath              >=1.4.101.0
     , file-uri              ^>=0.1.0.0
     , haskus-utils-types    ^>=1.5
-    , haskus-utils-variant  ^>=3.3
+    , haskus-utils-variant  ^>=3.3 || ^>=3.4
     , lzma-static           ^>=5.2.5.3
     , megaparsec            >=8.0.0      && <9.3
     , mtl                   ^>=2.2
@@ -263,7 +264,7 @@ library
     build-depends:
       , terminal-size    ^>=0.3.3
       , unix             ^>=2.7 || ^>=2.8
-      , unix-bytestring  ^>=0.3.7.3
+      , unix-bytestring  ^>=0.4
 
   if flag(tui)
     cpp-options:   -DBRICK
@@ -399,7 +400,7 @@ test-suite ghcup-test
     , filepath                  >=1.4.101.0
     , generic-arbitrary         >=0.1.0   && <0.2.1 || >=0.2.2 && <0.3
     , ghcup
-    , hspec                     >=2.7.10  && <2.11
+    , hspec                     >=2.7.10  && <2.12
     , hspec-golden-aeson        ^>=0.9
     , QuickCheck                ^>=2.14.1
     , quickcheck-arbitrary-adt  ^>=0.3.1.0
